Fixed error messages for Lint